Move out p tag from label tag. Remove role att from Button and add aria-label

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
       <form class="form">
         <label for="email" class="label">
           <input type="email" id="email" class="input" placeholder="Email Address">
-          <p class="alert">Please provide a valid email</p>
           <img class="icon__error" src="images/icon-error.svg" alt="">
         </label>
-          <button class="btn" role="submit"><img src="images/icon-arrow.svg" alt=""></button>
+        <p class="alert">Please provide a valid email</p>
+        <button class="btn" aria-label="Send an email"><img src="images/icon-arrow.svg" alt="">
+        </button>
       </form>
     </div>
   </div>
